# virtual-iot-sdk

./: Cargo.toml  README.md  license.md
src/: lib.rs
src/auth/: mod.rs
src/communication/: http.rs  mod.rs  util.rs  websocket.rs
src/config/: mod.rs
src/device/: mod.rs
src/model/: mod.rs
src/models/: mod.rs
src/webhooks/: mod.rs
